# untether

./: .claudeignore  .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GEMINI.md  Justfile  LICENSE  PLAN-ask-user-question.md  README.md  ROADMAP.md  SECURITY.md  changelog.md  cliff.toml  developing.md  llms-full.txt  llms.txt  pyproject.toml  readme.md  zensical.toml
.claude/: hooks.json
.claude/agents/: debug-reviewer.md  delivery-reviewer.md  qa-reviewer.md
.claude/commands/: debug.md  docs.md  fix.md  handover.md  implement.md  kaizen-review.md  kaizen.md  plan.md  pr-dev.md  pr-main.md  qa.md
.claude/hooks/: content-filter-guard.sh  context-drift-check.sh  context-guard-stop.sh  context-structural-change.sh  help-faq-protect.sh  kaizen-stop-nudge.sh  release-guard-mcp.sh  release-guard-protect.sh  release-guard.sh
.claude/rules/: context-quality.md  control-channel.md  dev-workflow.md  help-faq.md  kaizen.md  (+5 more)
.codex/: AGENTS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
codex_telegram_bridge/: pyproject.toml  readme.md
contrib/: README-issue-watcher.md  com.littlebearapps.untether-issue-watcher.plist  untether-issue-watcher.service  untether.service
docs/: LOOPS.md  developing.md  index.md  plugins.md  specification.md  user-guide.md
incoming/: d1_sample_data.json  d1_schema.txt  repomix-summary-scout-v0.8.5.md  v0.35.1rc4-integration-test-plan.md
scripts/: audit-noop-resume.sh  docs_prebuild.py  fleet-rollback.sh  fleet-rollout.sh  fleet-status.sh  healthcheck.sh  onboarding_preview.py  run-integration-tests.sh  staging.sh  validate_release.py
tests/: conftest.py  factories.py  plugin_fixtures.py  telegram_fakes.py  test_amp_runner.py  test_api_exports.py  test_ask_user_question.py  test_at_command.py  test_attestation_marker.py  test_auth_command.py  test_auto_router.py  test_bridge_config_reload.py  test_browse_command.py  test_build_args.py  test_callback_dispatch.py  test_cancel_dedup.py  test_claude_control.py  test_claude_runner.py  test_claude_schema.py  test_cli_auto_router.py  test_cli_chat_id.py  test_cli_commands.py  test_cli_config.py  test_cli_doctor.py  test_cli_helpers.py  test_codex_runner_helpers.py  test_codex_schema.py  test_codex_tool_result_summary.py  test_command_engine_gates.py  test_command_registry.py  test_config_command.py  test_config_path_env.py  test_config_reload_notification.py  test_config_store.py  test_config_watch.py  test_context.py  test_cooldown_bypass.py  test_cost_tracker.py  test_describe_cron.py  test_diff_preview.py  (+97 more)
(+309 files in other folders)
